# Darth_VAEder

./: .gitignore  CONTRIBUTING.md  DATA_STRUCTURE.md  ENVIRONMENT.md  README.md  environment.yml  pyproject.toml
.github/workflows/: lint.yml
EG_scripts/: EG_LatentSpaceVisualization.py  EG_ShapeEmbedLite_LatentSpaceViz.py  EG_latents_interactive.py  EG_train.py  EG_umap_dashboard.ipynb  MorphMeasurements.py  ShapeEmbed_Inference.py
Joaquin'scripts/: ComputeFeatures.py  RyanTraversalsPCA.py  _feature_explorer_common.py  add_cnPatches.py  add_edge_flag.py  add_pCellmask.py  build_cell_table.py  compute_stats.py  explore_datamodule.py  export_pCellmask_pngs.py  extract_embeddings.py  feature_pca_explorer.py  feature_umap_dashboard.ipynb  feature_umap_explorer.py  feature_umap_explorer_clusters.py  generate_seg_npy.py  getitemSampling.py  latent_analysis.ipynb  latent_explorer.py  latent_explorer_cell.py  latent_feature_correlation.py  make_splits.py  make_umap3d_video.py  masks_to_dms.py  migrate_to_zarr.py  multinucleation_image_metadata.csv  patch_extraction.py  sampling.py  test_edge_criterion.py  train.py  umap_dashboard.ipynb  upsample_dataset.py
Joaquin'scripts/zarr chewing/: add_cnPatches.py
configs/: data.yaml  model.yaml  train.yaml
example/: README.md  lightning_datamodule.py  lightning_tutorial.py  test_vae.py
notebooks/: compute_pp_norm.py  dataset_EG_test.py  example_exploration.py  face_reconstruction.py  inspect_csv.py  test_dataset.py  video_dataset_test.py
outputs/: cell_table.csv
scripts/: add_pCellmask.py  make_splits.py  train.py
src/darth_vaeder/: __init__.py  vae.py
src/darth_vaeder/JS_models/: __init__.py  lit_vae.py  vae.py
src/darth_vaeder/datamodules/: HTSdatamodule.py  JS_transforms.py  JS_zarr_datamodule.py  __init__.py  datamodule.py  dataset_EG.py  dataset_template.py  normalization.py  per_plate_normalization.py  splits.py  transforms.py  zarr_datamodule.py  zarr_dataset.py
src/darth_vaeder/eval/: __init__.py  embed.py  probe.py
src/darth_vaeder/models/: EG_lit_vae.py  lit_vae.py  vae.py
src/darth_vaeder/utils/: __init__.py  stats.py
tools/cropping_emmily/: annotate_centroids.py  pyproject.toml
