[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=61" ]

[project]
name = "darth-vaeder"
description = "darth_vaeder is a Python package for blank."
readme = "README.md"
keywords = [  ]
authors = [
  { email = "dandanmao66@gmail.com", name = "Dana Allen" },
  { email = "joaquin.smucler@gmail.com", name = "Joaquin S" },
  { email = "emilyg.gemmill@gmail.com", name = "Emily Gemmill" },
]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "matplotlib",
  "numpy",
]

[tool.setuptools.packages.find]
where = [ "src" ]

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4
src = [ "notebooks", "src" ]

format.indent-style = "space"
format.quote-style = "double"
format.skip-magic-trailing-comma = false
format.docstring-code-line-length = "dynamic"
format.docstring-code-format = true
lint.select = [ "D", "E", "F", "I", "NPY", "PD", "W" ]
lint.per-file-ignores."**/*.ipynb" = [ "D", "E402", "E501", "PD" ]
lint.per-file-ignores."**/__init__.py" = [ "D104", "F401" ]
lint.per-file-ignores."**/docs/**" = [ "I" ]
lint.per-file-ignores."**/examples/**" = [ "D", "E402", "E501", "F821" ]
lint.per-file-ignores."**/notebooks/**" = [ "D", "E402", "E501", "PD" ]
lint.per-file-ignores."**/tests/**" = [ "D" ]
lint.pydocstyle.convention = "numpy"
